--- a/Eagle Files/Readme
+++ b/Eagle Files/Readme
@@ -2,3 +2,6 @@ The spot welder is made of two boards which are stacked on top of each other.
 One board contains all the logic and low power electronic components and the other one contains the Mosfets.
 
 The gerber files are made to be used at pcbway.com 
+
+To download Zip files click on them and then click "viw raw". 
+Downloading by right click and "save as" does seem to cause problems.
