--- a/Eagle Files/Readme
+++ b/Eagle Files/Readme
@@ -3,5 +3,5 @@ One board contains all the logic and low power electronic components and the oth
 
 The gerber files are made to be used at pcbway.com 
 
-To download Zip files click on them and then click "viw raw". 
+To download Zip files click on them and then click "view raw". 
 Downloading by right click and "save as" does seem to cause problems.
