--- a/Eagle Files/Readme
+++ b/Eagle Files/Readme
@@ -2,6 +2,8 @@ The spot welder is made of two boards which are stacked on top of each other.
 One board contains all the logic and low power electronic components and the other one contains the Mosfets.
 
 The gerber files are made to be used at pcbway.com 
+You can support me by registering through this link http://www.pcbway.com/setinvite.aspx?inviteid=12824
+This way you get a 5$ coupon for your order and i get some credits at the shop which i can use for upcoming projects.
 
 To download Zip files click on them and then click "view raw". 
 Downloading by right click and "save as" does seem to cause problems.
