--- a/Eagle Files/Readme
+++ b/Eagle Files/Readme
@@ -1,6 +1,15 @@
 The spot welder is made of two boards which are stacked on top of each other.
 One board contains all the logic and low power electronic components and the other one contains the Mosfets.
 
+---------------------------------------------------------------------------------------------------------
+
+UPDATE: (07.2016) Since pcbway.com mostly does not accept more than one single designs or a combined board 
+like the spot_welder_v2 on one 10x10cm board i tried firstpcb.com. 
+They accepted my order without problems and without raising the cost.
+Ordering process is almost the same except changing color of the board would cause extra cost.
+
+---------------------------------------------------------------------------------------------------------
+
 The gerber files are made to be used at pcbway.com 
 You can support me by registering through this link http://www.pcbway.com/setinvite.aspx?inviteid=12824
 This way you get a 5$ coupon for your order and i get some credits at the shop which i can use for upcoming projects.
