--- a/Parts/Readme
+++ b/Parts/Readme
@@ -7,5 +7,5 @@ What else you will need:
 
 
 Parts I bought at the local hardware store:
-- 1x piece of 16x70mm aluminium about 5mm thick
+- 1x piece of 16x70mm aluminium about 3 or 4mm thick
 - Some cable and short piece of thick solid copper wire for the probes tips  
