--- a/Parts/Readme
+++ b/Parts/Readme
@@ -9,3 +9,11 @@ What else you will need:
 Parts I bought at the local hardware store:
 - 1x piece of 16x70mm aluminium about 3 or 4mm thick
 - Some cable and short piece of thick solid copper wire for the probes tips  
+
+
+Optional:
+Diodes to protect the Mosfets from high voltage spikes.
+Schottky: VS-100BGQ015 Mouser.com Part: 844-100BGQ015
+TVS: 5KP13A-E3/54 Mouser.com Part: 625-5KP13A-E3
+
+More info on the diodes: https://www.instructables.com/id/DIY-Arduino-Battery-Spot-Welder/step4/Adding-Protection-Diodes-optional/
